tests/snapshots/array_destructuring_tests__list_destructuring_basic.snap
---
source: tests/array_destructuring_tests.rs
expression: program
---
Program {
    statements: [
        Expression {
            expr: Assign {
                var: Array {
                    items: [
                        ArrayItem {
                            key: None,
                            value: Variable {
                                name: Span {
                                    start: 11,
                                    end: 13,
                                },
                                span: Span {
                                    start: 11,
                                    end: 13,
                                },
                            },
                            by_ref: false,
                            unpack: false,
                            span: Span {
                                start: 11,
                                end: 13,
                            },
                        },
                        ArrayItem {
                            key: None,
                            value: Variable {
                                name: Span {
                                    start: 15,
                                    end: 17,
                                },
                                span: Span {
                                    start: 15,
                                    end: 17,
                                },
                            },
                            by_ref: false,
                            unpack: false,
                            span: Span {
                                start: 15,
                                end: 17,
                            },
                        },
                        ArrayItem {
                            key: None,
                            value: Variable {
                                name: Span {
                                    start: 19,
                                    end: 21,
                                },
                                span: Span {
                                    start: 19,
                                    end: 21,
                                },
                            },
                            by_ref: false,
                            unpack: false,
                            span: Span {
                                start: 19,
                                end: 21,
                            },
                        },
                    ],
                    span: Span {
                        start: 6,
                        end: 24,
                    },
                },
                expr: Variable {
                    name: Span {
                        start: 25,
                        end: 31,
                    },
                    span: Span {
                        start: 25,
                        end: 31,
                    },
                },
                span: Span {
                    start: 6,
                    end: 31,
                },
            },
            span: Span {
                start: 6,
                end: 33,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 33,
    },
}
