tests/snapshots/array_destructuring_tests__nested_short_array_destructuring.snap
---
source: tests/array_destructuring_tests.rs
assertion_line: 54
expression: program
---
Program {
    statements: [
        Nop {
            span: Span {
                start: 0,
                end: 6,
            },
        },
        Expression {
            expr: Assign {
                var: Array {
                    items: [
                        ArrayItem {
                            key: None,
                            value: Variable {
                                name: Span {
                                    start: 7,
                                    end: 9,
                                },
                                span: Span {
                                    start: 7,
                                    end: 9,
                                },
                            },
                            by_ref: false,
                            unpack: false,
                            span: Span {
                                start: 7,
                                end: 9,
                            },
                        },
                        ArrayItem {
                            key: None,
                            value: Array {
                                items: [
                                    ArrayItem {
                                        key: None,
                                        value: Variable {
                                            name: Span {
                                                start: 12,
                                                end: 14,
                                            },
                                            span: Span {
                                                start: 12,
                                                end: 14,
                                            },
                                        },
                                        by_ref: false,
                                        unpack: false,
                                        span: Span {
                                            start: 12,
                                            end: 14,
                                        },
                                    },
                                    ArrayItem {
                                        key: None,
                                        value: Variable {
                                            name: Span {
                                                start: 16,
                                                end: 18,
                                            },
                                            span: Span {
                                                start: 16,
                                                end: 18,
                                            },
                                        },
                                        by_ref: false,
                                        unpack: false,
                                        span: Span {
                                            start: 16,
                                            end: 18,
                                        },
                                    },
                                ],
                                span: Span {
                                    start: 11,
                                    end: 20,
                                },
                            },
                            by_ref: false,
                            unpack: false,
                            span: Span {
                                start: 11,
                                end: 20,
                            },
                        },
                        ArrayItem {
                            key: None,
                            value: Variable {
                                name: Span {
                                    start: 21,
                                    end: 23,
                                },
                                span: Span {
                                    start: 21,
                                    end: 23,
                                },
                            },
                            by_ref: false,
                            unpack: false,
                            span: Span {
                                start: 21,
                                end: 23,
                            },
                        },
                    ],
                    span: Span {
                        start: 6,
                        end: 26,
                    },
                },
                expr: Variable {
                    name: Span {
                        start: 27,
                        end: 33,
                    },
                    span: Span {
                        start: 27,
                        end: 33,
                    },
                },
                span: Span {
                    start: 6,
                    end: 33,
                },
            },
            span: Span {
                start: 6,
                end: 35,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 0,
        end: 35,
    },
}
