tests/snapshots/array_destructuring_tests__short_array_destructuring.snap
---
source: tests/array_destructuring_tests.rs
expression: program
---
Program {
    statements: [
        Expression {
            expr: Assign {
                var: Array {
                    items: [
                        ArrayItem {
                            key: None,
                            value: Variable {
                                name: Span {
                                    start: 7,
                                    end: 9,
                                },
                                span: Span {
                                    start: 7,
                                    end: 9,
                                },
                            },
                            by_ref: false,
                            unpack: false,
                            span: Span {
                                start: 7,
                                end: 9,
                            },
                        },
                        ArrayItem {
                            key: None,
                            value: Variable {
                                name: Span {
                                    start: 11,
                                    end: 13,
                                },
                                span: Span {
                                    start: 11,
                                    end: 13,
                                },
                            },
                            by_ref: false,
                            unpack: false,
                            span: Span {
                                start: 11,
                                end: 13,
                            },
                        },
                        ArrayItem {
                            key: None,
                            value: Variable {
                                name: Span {
                                    start: 15,
                                    end: 17,
                                },
                                span: Span {
                                    start: 15,
                                    end: 17,
                                },
                            },
                            by_ref: false,
                            unpack: false,
                            span: Span {
                                start: 15,
                                end: 17,
                            },
                        },
                    ],
                    span: Span {
                        start: 6,
                        end: 20,
                    },
                },
                expr: Variable {
                    name: Span {
                        start: 21,
                        end: 27,
                    },
                    span: Span {
                        start: 21,
                        end: 27,
                    },
                },
                span: Span {
                    start: 6,
                    end: 27,
                },
            },
            span: Span {
                start: 6,
                end: 29,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 29,
    },
}
